--- a/jschart.ui
+++ b/jschart.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>jschart</class>
  <widget class="QDialog" name="jschart">
+  <property name="windowModality">
+   <enum>Qt::NonModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
