--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -71,7 +71,7 @@
     <property name="geometry">
      <rect>
       <x>540</x>
-      <y>480</y>
+      <y>390</y>
       <width>240</width>
       <height>75</height>
      </rect>
@@ -91,7 +91,7 @@
     <property name="geometry">
      <rect>
       <x>540</x>
-      <y>390</y>
+      <y>480</y>
       <width>240</width>
       <height>75</height>
      </rect>
@@ -158,6 +158,25 @@
     </property>
     <property name="text">
      <string>$</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>130</y>
+      <width>351</width>
+      <height>301</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap>release/images/bitcoin-225079_1280.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
     </property>
    </widget>
   </widget>
